<?xml version="1.0"?>
<package format="2">
  <name>reto_m6</name>
  <version>0.1.0</version>
  <description>The reto_m6 package</description>

  <maintainer email="cristopher.rufasto.m@uni.pe">Cristopher Rufasto</maintainer>
  <license>BSD</license>

  <author email="cristopher.rufasto.m@uni.pe">Cristopher Rufasto</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_state_publisher_gui</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>urdf</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>joint_state_publisher_gui</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>urdf</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
